--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,256 +1,323 @@
 ---
 title: "Writing Your First Test"
-description: "A step-by-step guide to creating your first unit test using GoogleTest, introducing test structure, assertions, and best practices for starting effective testing from day one."
+description: "Walks users through creating a basic test case using GoogleTest, defining assertions, and running the tests. Illustrates best practices for organizing test files and interpreting test results."
 ---
 
 # Writing Your First Test
 
-A step-by-step guide to creating your first unit test using GoogleTest, introducing test structure, assertions, and best practices for starting effective testing from day one.
+This guide walks you through creating a basic test case using GoogleTest, defining assertions, and running the tests. It illustrates best practices for organizing test files and interpreting test results to help you quickly start writing effective tests.
 
 ---
 
-## 1. What You Will Achieve
+## 1. What You Will Accomplish
 
-Welcome to your first journey into automated testing with GoogleTest. This guide will walk you through:
-
-- Writing a basic test case that runs successfully.
-- Understanding the basic structure of a test.
-- Using assertions to validate your code.
-- Learning best practices for sustainable test writing.
-
-By the end, you will have a foundational test ready to build upon as your project grows.
-
-### Prerequisites
-
-Before starting, ensure you have:
-
-- A C++ development environment with C++17 support.
-- GoogleTest installed and accessible in your build environment.
-- Basic familiarity with C++ syntax and compilation.
-
-### Expected Outcome
-
-You will create a simple test program, compile it, execute it, and observe the test framework reporting success or failure.
-
-### Time Estimate
-
-About 15 to 30 minutes from start to finish.
-
-### Difficulty Level
-
-Beginner-friendly — no prior experience with GoogleTest needed.
+- Write your first simple test case using GoogleTest macros
+- Use basic assertions to validate code behavior
+- Compile and run your tests, observing success and failure outputs
+- Organize your test files for clarity and maintainability
+- Understand how to interpret test results and debug failures
 
 ---
 
-## 2. Step-by-Step Guide to Writing Your First Test
+## 2. Prerequisites
 
-Let's demystify test writing. Follow these focused steps to create and run your first GoogleTest test.
+Before you begin this guide, ensure the following:
 
-### Step 1: Include the GoogleTest Header
+- GoogleTest and GoogleMock are installed and configured (See [Setup and Installation](../setup-and-installation))
+- Your build system includes the necessary compiler flags and links against GoogleTest libraries
+- You have a working knowledge of basic C++ syntax
 
-At the top of your test source file, add:
+---
+
+## 3. Expected Outcome
+
+By the end of this guide, you will have:
+
+- Created a test source file containing one or more basic test cases
+- Used GoogleTest macros such as `TEST` and `ASSERT_*`/`EXPECT_*`
+- Compiled and executed tests, understanding the output format
+- Gained confidence in writing tests to check your code
+
+---
+
+## 4. Estimated Time
+
+This workflow is beginner-friendly and should take approximately 15-30 minutes.
+
+---
+
+## 5. Step-by-Step Instructions
+
+### Step 1: Create a Test Source File
+
+- Create a new `.cc` or `.cpp` test file in your project directory, for example `sample_test.cc`.
+
+### Step 2: Include GoogleTest Header
+
+Add this line at the top of your test file:
 
 ```cpp
 #include <gtest/gtest.h>
 ```
 
-This includes all core test framework utilities.
+This includes all the necessary GoogleTest declarations.
 
-### Step 2: Write a Simple Test Case
+### Step 3: Write Your First Test Case
 
-Define a test using the `TEST()` macro:
+Use the `TEST` macro to define a named test case following this syntax:
 
 ```cpp
-// Define a test named HandlesZeroInput in the test suite FactorialTest
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);  // Verify that Factorial(0) returns 1
+TEST(TestSuiteName, TestName) {
+  // Your test logic and assertions here
 }
 ```
 
-- The first parameter is the test suite name — group related tests here.
-- The second parameter is the individual test name.
-- `EXPECT_EQ` is an assertion checking for equality.
-
-> Replace `Factorial` with your function under test or a simple trivial example if unfamiliar.
-
-### Step 3: Implement the Tested Function (Minimal)
-
-If you don't have an existing function, create a minimal implementation for testing purposes:
+For example:
 
 ```cpp
-int Factorial(int n) {
-  return (n <= 1) ? 1 : n * Factorial(n - 1);
+TEST(SimpleMathTest, AdditionWorks) {
+  int result = 2 + 2;
+  EXPECT_EQ(result, 4);  // Test assertion
 }
 ```
 
-### Step 4: Write Multiple Tests for Different Scenarios
+Here:
 
-Add more test cases to cover other input values:
+- `SimpleMathTest` is the test suite name grouping related tests
+- `AdditionWorks` is the specific test
+- `EXPECT_EQ` asserts that the values are equal — failure here will report but continue
+
+### Step 4: Add More Assertions
+
+Basics include:
+
+- `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` — equality checks
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` — Boolean checks
+
+`ASSERT_*` will abort the current test on failure; `EXPECT_*` will continue.
+
+You can add multiple assertions inside the test to check different conditions.
+
+Example:
 
 ```cpp
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
+TEST(SimpleMathTest, MultiplicationWorks) {
+  EXPECT_EQ(3 * 5, 15);
+  ASSERT_TRUE((2 * 2) == 4);
 }
 ```
 
-### Step 5: Write the main() Function to Run Tests
+### Step 5: Compile Your Test
 
-Create an entry point to run all tests:
+Make sure your build system compiles the test file and links with GoogleTest libraries.
 
-```cpp
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);  // Parse command-line flags
-  return RUN_ALL_TESTS();                  // Run all tests and return results
-}
-```
-
-- This initializes the test framework.
-- `RUN_ALL_TESTS()` executes all registered tests and returns `0` on success.
-
-### Step 6: Compile and Link Your Test
-
-Use your build system or command line. For example with `g++`:
+For example, a basic compile command using `g++` could look like:
 
 ```bash
-g++ -std=c++17 -isystem /path_to_gtest/include -pthread your_test.cc /path_to_gtest/libgtest.a /path_to_gtest/libgtest_main.a -o your_test_executable
+g++ -std=c++17 -isystem /path/to/googletest/include \
+    -pthread sample_test.cc /path/to/libgtest.a /path/to/libgtest_main.a \
+    -o sample_test
 ```
 
-- Replace `/path_to_gtest/` with actual GoogleTest paths.
-- Link with pthread (`-pthread`) is required on most Unix-like systems.
+Refer to your project’s build integration guide ([Configuration & Verification](../setup-and-installation/configuration-verification)) for detailed instructions.
 
-### Step 7: Run Your Test
+### Step 6: Run Your Test Executable
 
-Execute:
+Run the compiled binary:
 
 ```bash
-./your_test_executable
+./sample_test
 ```
 
-Observe the output — a successful test run will report:
+You should see output similar to:
 
 ```
 [==========] Running 2 tests from 1 test suite.
 [----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput (0 ms)
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
-[----------] 2 tests from FactorialTest (0 ms total)
+[----------] 2 tests from SimpleMathTest
+[ RUN      ] SimpleMathTest.AdditionWorks
+[       OK ] SimpleMathTest.AdditionWorks (0 ms)
+[ RUN      ] SimpleMathTest.MultiplicationWorks
+[       OK ] SimpleMathTest.MultiplicationWorks (0 ms)
+[----------] 2 tests from SimpleMathTest (0 ms total)
+
 [----------] Global test environment tear-down
 [==========] 2 tests from 1 test suite ran. (0 ms total)
 [  PASSED  ] 2 tests.
 ```
 
-### Step 8: Interpret Your Results
+This means your tests passed successfully.
 
-- If all tests pass, you've correctly set up and written your first tests.
-- If some fail, the output points to the file and line with the failing assertion.
-- You can add meaningful failure messages by streaming into assertions:
+### Step 7: Interpret Failures
 
-```cpp
-EXPECT_EQ(Factorial(0), 1) << "Factorial(0) must be 1";
+If an assertion fails, GoogleTest will print a detailed message including:
+
+- File and line number
+- Expected and actual values
+- Failed test name
+
+Example failure output:
+
+```
+sample_test.cc:10: Failure
+Expected equality of these values:
+  result
+    Which is: 5
+  4
+[  FAILED  ] SimpleMathTest.AdditionWorks
 ```
 
----
+You can then fix your code or test accordingly.
 
-## 3. Best Practices & Tips
+### Step 8: Organize Multiple Tests
 
-- **Name Tests Clearly.** Use meaningful test suite and test names to portray intent.
-- **Keep Tests Small.** Each test should verify a single aspect.
-- **Use Assertions Wisely.** Prefer `EXPECT_*` unless failure means test shouldn't continue (`ASSERT_*`).
-- **Isolate Tests.** Tests must not depend on each other or shared global state.
-- **Setup & Teardown.** Use test fixtures (`TEST_F`) for shared setup.
-- **Use GoogleTest Features.** Explore parameterized tests and value-parameterized tests as you grow.
+For larger projects, organize tests into suites by functionality. Use descriptive names for test suites and tests for clarity.
 
----
+Example:
 
-## 4. Common Pitfalls to Avoid
+```cpp
+TEST(StringUtilsTest, HandlesEmptyStrings) { ... }
+TEST(StringUtilsTest, HandlesNonEmptyStrings) { ... }
+```
 
-- **Missing `main()` function.** Your tests need entry point unless you link to Google Test's `gtest_main`.
-- **Not linking with GoogleTest libraries correctly.** Ensure linkage to `gtest` and `gtest_main`.
-- **Failing to initialize GoogleTest.** Always call `InitGoogleTest()` before `RUN_ALL_TESTS()`.
-- **Ignoring assertion results.** Pay attention to test failures in output.
-- **Overcomplicating First Test.** Keep initial test very simple.
+### Step 9: Use Test Fixtures (Next Step)
+
+When tests share setup or teardown logic, move that into test fixtures (`TEST_F`). This will be covered in subsequent guides.
 
 ---
 
-## 5. Troubleshooting Common Issues
+## 6. Practical Tips & Best Practices
 
-<AccordionGroup title="Troubleshooting Your First Test">
-<Accordion title="Test executable does not compile due to missing gtest headers">
-Verify GoogleTest include directories are correctly specified in your compiler command using `-isystem` or equivalent.
-</Accordion>
-<Accordion title="Linker errors for GoogleTest symbols">
-Ensure you link against the GoogleTest libraries (`-lgtest -lgtest_main`) and link with pthread if required (`-pthread`).
-</Accordion>
-<Accordion title="No tests run when executing test binary">
-Make sure your test functions are registered properly by using the `TEST()` macro.
+- **Choose meaningful test names** describing what they verify.
 
-Verify you call `InitGoogleTest()` before running tests.
-</Accordion>
-<Accordion title="Assertion failures unexpectedly occur">
-Review your test inputs and expected values carefully.
+- **Keep tests small and focused** - one thing per test.
 
-Use verbose test output by running tests with `--gtest_print_time=1` to pinpoint slow or failing tests.
-</Accordion>
-</AccordionGroup>
+- Use `EXPECT_*` when you want tests to continue after a failure, `ASSERT_*` when continuing is unsafe.
+
+- **Add comments sparingly** - tests should be self-explanatory by names and assertions.
+
+- Group related tests into suites to improve readability.
+
+- Run tests regularly during development to catch regressions early.
+
+- Use the `--gtest_filter` option to run specific tests when needed.
+
+- Use verbose output flags when debugging failing tests.
 
 ---
 
-## 6. Next Steps
+## 7. Common Pitfalls
 
-- Explore [Writing Your First Mock](https://google.github.io/googletest/guides/getting-started/writing-your-first-mock.html) to mock interfaces in tests.
-- Learn about [Using Assertions and Matchers](https://google.github.io/googletest/guides/core-workflows/using-assertions-and-matchers.html) for richer validation.
-- Dive into [Organizing Test Suites](https://google.github.io/googletest/guides/core-workflows/organizing-test-suites.html) for scalable testing.
-- Check out integration with build systems in [Integrating with Build Systems](https://google.github.io/googletest/guides/integration-and-best-practices/integrating-with-build-systems.html).
+- Forgetting to link against GoogleTest libraries will cause compilation/link errors.
 
----
+- Using non-virtual destructors in classes under test can cause subtle bugs; GoogleTest can’t detect this but mock tests (gMock) require virtual destructors.
 
-## 7. Additional Resources
+- Mixing `EXPECT_*` and `ASSERT_*` improperly can cause misleading test behaviors.
 
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — detailed introduction.
-- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — for mocking techniques.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — official API guide.
+- Building tests with an invalid build environment will cause runtime failures.
+
+- Omitting `TEST` or test macros around test functions - GoogleTest relies on them for test discovery.
 
 ---
 
-## Example Full Test File
+## 8. Sample Basic Test File
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Simple factorial implementation
-int Factorial(int n) {
-  return (n <= 1) ? 1 : n * Factorial(n - 1);
+// Tests that addition works as expected.
+TEST(SimpleMathTest, AdditionWorks) {
+  int result = 2 + 2;
+  EXPECT_EQ(result, 4);
 }
 
-// Test suite FactorialTest, test HandlesZeroInput
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
+// Tests multiplication correctness.
+TEST(SimpleMathTest, MultiplicationWorks) {
+  EXPECT_EQ(3 * 5, 15);
+  ASSERT_TRUE((2 * 2) == 4);
 }
+```
 
-// Test suite FactorialTest, test HandlesPositiveInput
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
-}
+Try compiling and running this example as a starting point.
 
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+---
+
+## 9. Troubleshooting
+
+### Issue: Test executable does not compile or link
+
+**Cause:** Missing include paths or libraries.
+
+**Solution:** Confirm include directories and libraries `libgtest.a`, `libgtest_main.a` are correctly specified in your build system.
+
+### Issue: No tests run or test executable exits without running tests
+
+**Cause:** Tests may not be defined correctly.
+
+**Solution:** Verify you use `TEST()` macros properly. The test suite and test names cannot be empty.
+
+### Issue: Tests compile but show failures when run
+
+**Cause:** Assertions failed.
+
+**Solution:** Check your code logic and test expectations. Add logging or use `--gtest_verbose=info`.
+
+### Issue: GoogleTest output too verbose or too silent
+
+**Solution:** Adjust verbosity with `--gtest_verbose` and `--gtest_filter`.
+
+### Issue: Linking errors involving gtest_main
+
+**Solution:** Link with `gtest_main` if you want GoogleTest to provide the main() entry point.
+
+---
+
+## 10. Next Steps
+
+Once comfortable writing and running your first basic tests, proceed to:
+
+- [Running & Validating Tests](../first-test-experience/running-and-validating-tests) to learn how to interpret results and run tests effectively
+- [Writing Parameterized and Typed Tests](../../core-workflows/parameterized-tests) for testing multiple data inputs
+- Explore [Mocking APIs](../../mocking-apis/mock-classes-methods) for writing mocks and expectations
+- Learn advanced testing patterns with fixtures and test lifecycle management
+
+---
+
+## Additional Resources
+
+- Official GoogleTest primer: https://github.com/google/googletest/blob/main/docs/primer.md
+- GoogleMock documentation for advanced test doubles
+- Community forums and examples on GitHub
+
+---
+
+# Summary Diagram: Basic Test Workflow
+
+```mermaid
+flowchart TD
+  Start([Start Writing Test]) --> CreateFile[Create Test Source File]
+  CreateFile --> IncludeGoogleTest[Include <gtest/gtest.h>]
+  IncludeGoogleTest --> WriteTest[Test Using TEST() Macro]
+  WriteTest --> Compile[Compile Test Program]
+  Compile --> Run[Run Test Executable]
+  Run --> Pass{Tests Passed?}
+  Pass -->|Yes| Success[Celebrate Success]
+  Pass -->|No| Debug[Interpret Failures and Fix Tests]
+  Debug --> WriteTest
 ```
 
 ---
 
-Begin with this simple pattern to start benefitting from automated unit testing immediately.
-
 <Check>
-Remember: writing your first test is the foundation for all future testing success. Maintain clarity and simplicity as your guiding principles.
+Remember: Always write tests before or alongside your code. Start simple and build confidence incrementally.
 </Check>
+
+---
+
+<Info>
+For detailed information on assertions, test fixtures, parameterized tests, and mocking, see the related documentation sections linked above.
+</Info>
+
+---
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/getting-started/first-test-experience/writing-your-first-test.md", "range": "1-100"}]} />
