--- a/guides/getting-started/first-mock-example.mdx
+++ b/guides/getting-started/first-mock-example.mdx
@@ -1,53 +1,262 @@
 ---
-title: "Your First Mock: Testing with GoogleMock"
-description: "An introductory walkthrough for creating and using mock objects in tests. This guide covers when and why to use mocking, demonstrates mock class definition, and steps through a simple mock-based unit test."
+title: "Your First Mock with GoogleMock"
+description: "Introduces mocking concepts in C++, demonstrates how to create and use mock classes, set expectations, and simulate behavior with GoogleMock. Teaches the use of basic mock macros in real test scenarios."
 ---
 
-# Your First Mock: Testing with GoogleMock
+# Your First Mock with GoogleMock
 
 ## Introduction
-This guide introduces you to creating and using mock objects in your tests using GoogleMock (gMock). You'll learn when and why to use mocking, how to define mock classes, and how to write a simple unit test that uses mocks. This essential skill lets you verify the interaction between your code and its dependencies, making tests more robust and maintainable.
+
+Welcome to your first step into mocking with GoogleMock (gMock). This guide introduces the core concepts of creating and using mock classes in C++. You'll learn how to define mock classes and mock methods, specify expectations about their usage, and verify interactions in your tests. This foundational knowledge will help you test complex components by replacing dependencies with mocks.
 
 ---
 
-## Workflow Overview
+## What You Will Learn
 
-### What You Will Achieve
-By following this guide, you will:
-- Understand the purpose and benefits of mocking in unit tests.
-- Define a mock class using `MOCK_METHOD` macros.
-- Write a unit test that sets expectations on mock objects.
-- Learn how GoogleMock verifies method calls and argument matching.
-
-### Prerequisites
-- Familiarity with basic C++ and GoogleTest.
-- GoogleTest and GoogleMock installed and configured in your project.
-- A simple interface (abstract base class) that you wish to mock.
-
-### Time Estimate
-About 15-20 minutes to complete the example and understand the concepts.
-
-### Difficulty
-Beginner to intermediate – no advanced C++ features required.
+- How to create a mock class using `MOCK_METHOD`
+- How to set basic expectations with `EXPECT_CALL`
+- How to control mock method behavior using actions
+- How to write a simple test using a mock
 
 ---
 
-## Step-by-Step Instructions
+## Prerequisites
 
-### 1. Understand Why and When to Use Mocking
-Sometimes in tests, it's impractical or undesirable to use real objects because they might be slow, unreliable, or difficult to control (e.g., file systems, networks, databases). Mock objects replace these collaborators, allowing you to:
+Before you begin, make sure you have:
 
-- Specify expected interactions explicitly.
-- Control behavior of dependencies during tests.
-- Detect incorrect usage of dependencies early.
+- GoogleMock and GoogleTest installed and configured in your project
+- Basic understanding of C++ classes and virtual functions
+- Familiarity with writing GoogleTest test cases
 
-Example scenario: Testing a `Painter` class that draws shapes using a `Turtle` interface. Instead of relying on an actual drawing implementation, you mock the `Turtle` to verify the drawing calls.
+For setup instructions, refer to [Setup and Installation](https://google.github.io/googletest/guides/getting-started/setup-and-installation.html).
 
-### 2. Define a Mock Class
-Given an interface such as `Turtle`, you create a derived mock class with `MOCK_METHOD` macros for each virtual method.
+---
+
+## Understanding Mock Classes
+
+In gMock, a **mock class** is a special class that provides mocked implementations of the functions in your real class or interface. Instead of writing the mock functions yourself, gMock's `MOCK_METHOD` macro generates them for you, allowing you to specify what calls you expect and how they behave.
+
+### Defining Mock Methods
+
+Each method you want to mock requires a line like this inside your mock class:
 
 ```cpp
-#include <gmock/gmock.h>  // Include GoogleMock headers
+MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
+```
+
+- `ReturnType`: The return type of the method
+- `MethodName`: The name of the method
+- `Args...`: The argument types inside parentheses
+- `Qualifiers` (optional): Method qualifiers such as `const` or `override`
+
+**Example:**
+
+```cpp
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
+};
+```
+
+**Important:** Put `MOCK_METHOD` declarations in the `public:` section, even if the original method is in another access section.
+
+---
+
+## Setting Expectations with `EXPECT_CALL`
+
+GoogleMock allows you to specify your expectations about how mock methods will be called using `EXPECT_CALL`. This includes how many times a method should be called, with what parameters, and what it should return or do.
+
+### Basic Syntax
+
+```cpp
+EXPECT_CALL(mock_object, MethodName(Matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action);
+```
+
+- `mock_object`: The instance of your mock class
+- `MethodName`: The method to expect
+- `Matchers`: Matchers that describe the method arguments (`_` for any value)
+- `Times`: How many times you expect the method to be called (optional)
+- `WillOnce` / `WillRepeatedly`: What to do when the expected call happens
+
+### Example
+
+Imagine testing a drawing program that uses the `MockTurtle`:
+
+```cpp
+using ::testing::_;
+using ::testing::Return;
+
+TEST(PainterTest, DrawsSquare) {
+  MockTurtle turtle;
+
+  EXPECT_CALL(turtle, PenDown())
+      .Times(1);
+  EXPECT_CALL(turtle, Forward(5))
+      .Times(4);
+  EXPECT_CALL(turtle, Turn(90))
+      .Times(4);
+
+  Painter painter(&turtle);
+  painter.DrawSquare(5);
+}
+```
+
+Here, you expect the turtle to put the pen down once, move forward 5 units four times, and turn 90 degrees four times.
+
+---
+
+## Controlling Behavior with Actions
+
+By default, mock methods return zero or default-constructed values. You can customize this behavior using **actions**.
+
+### Common Actions
+
+- `Return(value)`: Returns a specific value.
+- `ReturnRef(variable)`: Returns a reference to the variable.
+- `Invoke(callable)`: Invokes the given function, lambda, or functor.
+- `DoAll(...)`: Combines multiple actions.
+
+### Example
+
+```cpp
+EXPECT_CALL(mock_turtle, GetX())
+    .WillRepeatedly(Return(42));
+```
+
+This makes the mock method `GetX()` always return 42.
+
+---
+
+## Writing Your First Mock Test
+
+Putting it all together, here's a complete minimal example to mock a `Turtle` interface and test its usage.
+
+### Interface to Mock
+
+```cpp
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+};
+```
+
+### Mock Class
+
+```cpp
+#include <gmock/gmock.h>
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+```
+
+### Test Using the Mock
+
+```cpp
+#include <gtest/gtest.h>
+
+using ::testing::_;
+using ::testing::AtLeast;
+
+TEST(TurtleTest, DrawLine) {
+  MockTurtle turtle;
+
+  EXPECT_CALL(turtle, PenDown())
+      .Times(1);
+  EXPECT_CALL(turtle, Forward(10))
+      .Times(1);
+  EXPECT_CALL(turtle, PenUp())
+      .Times(1);
+
+  // Code under test using turtle here:
+  turtle.PenDown();
+  turtle.Forward(10);
+  turtle.PenUp();
+}
+```
+
+This test verifies that `PenDown()`, `Forward(10)`, and `PenUp()` are called exactly once.
+
+---
+
+## Practical Tips and Best Practices
+
+- **Always add the `override` qualifier** when mocking a virtual method.
+- **Put `MOCK_METHOD` macros in the public section** regardless of original access level.
+- **Use matchers like `_`** when you don’t care about certain parameters.
+- **Set default behavior with `ON_CALL`** if the method is called but you don't want to expect it explicitly.
+- **Use `NiceMock<T>`** to suppress warnings for uninteresting calls.
+- **Use sequences** to enforce call order when necessary by wrapping `EXPECT_CALL`s in an `InSequence` block.
+
+---
+
+## Common Pitfalls
+
+- **Mismatch between arguments and mock method declaration:** Make sure the argument list and qualifiers match exactly.
+- **Forgetting to mock all overloaded methods:** If a method is overloaded, you must mock each overload explicitly or bring others into scope with `using`.
+- **Setting expectations after the mock method is called:** Always set expectations before exercising the code.
+- **Leaking mock objects:** Always delete mocks or allow leaks explicitly, otherwise verification is skipped.
+- **Ignoring uninteresting call warnings:** If a method is called but has no `EXPECT_CALL`, gMock will warn — decide if you want to ignore or expect the call.
+
+---
+
+## Troubleshooting
+
+### Issue: Method of the real object called instead of mock
+
+Make sure the method you mock is declared `virtual` in the base class.
+
+### Issue: Unexpected or uninteresting mock function call warnings
+
+Use `NiceMock` to suppress uninteresting call warnings, or add appropriate `EXPECT_CALL` or `ON_CALL` statements.
+
+### Issue: Confusing overload resolution
+
+Specify the exact method signature when mocking overloaded functions.
+
+### Issue: Tests fail due to call order
+
+Use `InSequence` or `.After()` clauses to control expected order of calls explicitly.
+
+---
+
+## Next Steps
+
+- Practice writing mocks for interfaces in your codebase
+- Learn advanced matching and action techniques (see [Matchers Reference](https://google.github.io/googletest/reference/matchers.html))
+- Explore partial and strict mock behaviors using [NiceMock](https://google.github.io/googletest/reference/mocking.html#_CPPv4N7testing12NiceMockIT_EE) and [StrictMock](https://google.github.io/googletest/reference/mocking.html#_CPPv4N7testing13StrictMockIT_EE)
+- Delve into advanced mocking patterns in the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+
+---
+
+## References
+
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [Setting Expectations and Actions](https://google.github.io/googletest/reference/mocking.html#expectations-and-actions)
+- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html)
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+
+---
+
+## Example Code Snippet
+
+```cpp
+#include <gmock/gmock.h>
+#include <gtest/gtest.h>
 
 class Turtle {
  public:
@@ -55,10 +264,6 @@ class Turtle {
   virtual void PenUp() = 0;
   virtual void PenDown() = 0;
   virtual void Forward(int distance) = 0;
-  virtual void Turn(int degrees) = 0;
-  virtual void GoTo(int x, int y) = 0;
-  virtual int GetX() const = 0;
-  virtual int GetY() const = 0;
 };
 
 class MockTurtle : public Turtle {
@@ -66,114 +271,26 @@ class MockTurtle : public Turtle {
   MOCK_METHOD(void, PenUp, (), (override));
   MOCK_METHOD(void, PenDown, (), (override));
   MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(void, Turn, (int degrees), (override));
-  MOCK_METHOD(void, GoTo, (int x, int y), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-  MOCK_METHOD(int, GetY, (), (const, override));
-};
-```
-
-### Key Points:
-- Always put `MOCK_METHOD` declarations in the `public:` section of your mock class.
-- Use `(override)` to indicate you are mocking virtual functions properly.
-- For const methods, add `(const, override)`.
-
-### 3. Write a Simple Mock-Based Unit Test
-Now you can use the mock in a test to verify interactions. For example, a test ensuring `PenDown()` is called when drawing:
-
-```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
-
-using ::testing::AtLeast;
-
-class Painter {
- public:
-  explicit Painter(Turtle* turtle) : turtle_(turtle) {}
-  bool DrawCircle(int x, int y, int radius) {
-    turtle_->PenDown();
-    // ... Drawing logic omitted ...
-    return true;
-  }
-
- private:
-  Turtle* turtle_;
 };
 
-TEST(PainterTest, CanDrawSomething) {
-  MockTurtle turtle;                     // Step 2: create mock object
+TEST(TurtleTest, MovesForward) {
+  MockTurtle mock_turtle;
 
-  EXPECT_CALL(turtle, PenDown())        // Step 3: set expectation
-      .Times(AtLeast(1));                // Expect PenDown to be called at least once
+  EXPECT_CALL(mock_turtle, PenDown()).Times(1);
+  EXPECT_CALL(mock_turtle, Forward(10)).Times(1);
+  EXPECT_CALL(mock_turtle, PenUp()).Times(1);
 
-  Painter painter(&turtle);             // Step 4: exercise code under test
-  EXPECT_TRUE(painter.DrawCircle(0, 0, 10));  // Step 5: optionally verify outcome
+  mock_turtle.PenDown();
+  mock_turtle.Forward(10);
+  mock_turtle.PenUp();
 }
 ```
 
-### What Happens:
-- `EXPECT_CALL(turtle, PenDown())` sets an expectation that `PenDown()` must be called at least once.
-- If `PenDown()` is not called, the test fails with a clear message.
-- If called more than expected or with wrong arguments, test will fail immediately.
-
-### 4. Run and Interpret the Test
-Compile and run your tests as usual. If the mock’s expectations are not met, the failure output will guide you to the problem with file, line number, and call details.
-
-<Tip>
-Run your test with `--gmock_verbose=info` to see detailed logs of mock interactions. This helps diagnose expectation failures.
-</Tip>
-
-### 5. Set Flexible Expectations Using Matchers
-If you don't care about some arguments, replace them with `_` matcher:
-
-```cpp
-using ::testing::_;
-EXPECT_CALL(turtle, GoTo(50, _)); // x must be 50; y can be anything
-```
-
-You can specify how many times a method should be called with `Times()`, use sequences (`InSequence`) to enforce call order, and define return values using `.WillOnce(Return(value))` or `.WillRepeatedly(Return(value))`.
-
-### 6. Best Practices
-- Always write `EXPECT_CALL` before exercising the code that calls the mock.
-- Define mock classes near the tests that own the mocked interfaces, to avoid maintenance issues if the interface changes.
-- Avoid over-constraining your mocks; prefer minimal expectations necessary to verify the test intent.
-- Use `RetiresOnSaturation()` if a strict call count could cause brittle tests.
+This minimal test confirms the mock behavior as expected.
 
 ---
 
-## Troubleshooting & Tips
+<Callout type="tip">
+Remember: Define your mocks and expectations based on the interface and what the code under test should do, not on internal implementation details.
+</Callout>
 
-### Common Issues
-- **Mock methods not called as expected**: Check that `EXPECT_CALL` is set up before the tested code runs.
-- **Uninteresting calls warning**: This means a mock method without an expected call was invoked. Use `NiceMock` to suppress or add catch-all expectations with `.Times(AnyNumber())` if these calls are acceptable.
-- **Overly strict expectations cause test failures after refactoring**: Relax expectations or use sequences and partial ordering to avoid brittle tests.
-
-### Pro Tips
-- Use `ON_CALL` to specify default mock behaviors without setting call expectations.
-- Use `NiceMock` to suppress unwanted warnings during development.
-- Use `InSequence` for ordering calls if sequence matters.
-- Matchers like `AnyNumber()`, `AtLeast()`, `_` (wildcard) keep tests flexible.
-- When mocking overloaded methods, always specify argument types or use `Const()` for const overloads to disambiguate.
-
----
-
-## Next Steps & Related Content
-- **Writing Your First Test**: If you haven't yet, see [Writing Your First Test](../getting-started/writing-your-first-test.md) to get comfortable with basic GoogleTest concepts.
-- **Mocking Reference**: For a comprehensive description of mocking facilities, visit the [Mocking Reference](../reference/mocking.md).
-- **gMock Cookbook**: For advanced mocking patterns and tips, explore the [gMock Cookbook](../gmock_cook_book.md).
-- **Setup and Installation**: Ensure your environment is correctly set up by reviewing [Setup and Installation](../getting-started/setup-installation.md).
-- **Troubleshooting**: If you encounter issues, consult [Common Installation & Configuration Issues](../getting-started/setup-troubleshooting/common-issues.md).
-
----
-
-## Additional Resources
-- [GoogleMock Official Documentation](https://google.github.io/googletest/gmock_for_dummies.html)
-- GoogleMock API Reference
-- Matchers and Actions Reference
-
----
-
-## Summary
-This page guides you through your first use of GoogleMock for testing with mocks. Through practical steps and code examples, you learn how to define mock classes, set method call expectations, specify behaviors via matchers and actions, and write robust unit tests that verify interactions. Start here to gain confidence with mocking concepts before exploring advanced features and integration.
-
----
