--- a/guides/core-workflows/using-assertions.mdx
+++ b/guides/core-workflows/using-assertions.mdx
@@ -1,282 +1,246 @@
 ---
-title: "Using Assertions Effectively"
-description: "Detailed guide on leveraging the rich set of GoogleTest assertions to validate all aspects of your C++ code, with real-world patterns and tips for choosing between fatal and non-fatal assertions."
+title: "Assertions and Test Expectations"
+description: "Details how to use GoogleTest's rich assertion macros to validate behavior, including equality, exception, and fatal/non-fatal checks. Introduces best practices for writing clear and meaningful assertions."
 ---
 
-# Using Assertions Effectively
+# Assertions and Test Expectations
 
-Leverage the rich set of GoogleTest assertions to verify your C++ code with precision and clarity. This guide walks you through practical patterns, guiding you to select the right assertions for your testing needs, handle failures gracefully, and craft readable, maintainable tests.
-
----
-
-## 1. Why Use GoogleTest Assertions?
-
-Assertions are the cornerstone of effective testing. They confirm that specific conditions hold true at a given point in your code. GoogleTest offers flexible assertions that generate detailed messages on failure, allowing you to swiftly identify and fix issues.
-
-### Benefits of GoogleTest Assertions
-- Clear and expressive macros for common verification needs.
-- Separation of fatal (`ASSERT_*`) and non-fatal (`EXPECT_*`) assertions.
-- Support for streaming custom failure messages.
-- Integration with GoogleMock to assert mock behavior.
+This guide details how to use GoogleTest's rich assertion macros to validate behavior, enabling you to write clear, meaningful, and robust tests. You will learn how to express various types of checks, handle expected failures gracefully, and follow best practices for test validation.
 
 ---
 
-## 2. Choosing the Right Assertion
+## 1. Overview of Assertions in GoogleTest
 
-GoogleTest classifies assertions into two main categories based on their severity:
+Assertions are the fundamental building blocks in test cases that check whether your code behaves as expected. GoogleTest supports two broad categories:
 
-| Assertion Type | Behavior | When to Use |
-|----------------|----------|-------------|
-| `EXPECT_*`     | Non-fatal failure; test continues. | When you want to report failures but continue execution to find more issues. |
-| `ASSERT_*`     | Fatal failure; test aborts current function. | When failure precludes further meaningful testing in the current scope. |
+- **Fatal Assertions** (`ASSERT_*`): On failure, the current test function is aborted immediately.
+- **Non-fatal Assertions** (`EXPECT_*`): On failure, execution continues, allowing multiple checks per test.
 
-**Example:**
-```cpp
-TEST(MyTest, Division) {
-  int divisor = GetDivisor();
-  ASSERT_NE(divisor, 0) << "Divisor must not be zero to prevent crash.";
+### Key Points:
 
-  int result = Divide(10, divisor);
-  EXPECT_EQ(result, 5) << "Unexpected result from Divide.";
-}
-```
-
-In this example, if `divisor` is zero, it aborts the test immediately to avoid undefined behavior. Otherwise, the test continues and checks the division result.
+- Use **fatal assertions** when subsequent test steps depend on the success of the assertion.
+- Use **non-fatal assertions** to accumulate errors and report all failures in one run.
+- Assertions are thread-safe and are automatically integrated with test result reporting.
 
 ---
 
-## 3. Basic Assertion Macros
+## 2. Basic Equality and Relational Assertions
 
-### Boolean Checks
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` — Passes if condition is `true`.
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` — Passes if condition is `false`.
+The simplest and most common assertions compare values for equality or inequalities.
 
-### Equality and Comparison
-- `EXPECT_EQ(val1, val2)`, `ASSERT_EQ(val1, val2)` — Checks `val1 == val2`.
-- `EXPECT_NE(val1, val2)`, `ASSERT_NE(val1, val2)` — Checks `val1 != val2`.
-- `EXPECT_LT(val1, val2)`, `ASSERT_LT(val1, val2)` — Checks `val1 < val2`.
-- `EXPECT_LE(val1, val2)`, `ASSERT_LE(val1, val2)` — Checks `val1 <= val2`.
-- `EXPECT_GT(val1, val2)`, `ASSERT_GT(val1, val2)` — Checks `val1 > val2`.
-- `EXPECT_GE(val1, val2)`, `ASSERT_GE(val1, val2)` — Checks `val1 >= val2`.
-
-### String Comparisons
-- `EXPECT_STREQ(str1, str2)` / `ASSERT_STREQ(str1, str2)` — Compares **C strings** for equality by content.
-- `EXPECT_STRNE(str1, str2)` / `ASSERT_STRNE(str1, str2)` — Compares **C strings** for inequality by content.
-- Case-insensitive versions: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`, etc.
-
-### Floating Point Comparisons
-- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` — Approximate equality for floats.
-- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` — Approximate equality for doubles.
-- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` — Checks difference is within bound.
-
----
-
-## 4. Advanced Assertions
-
-### Generalized Assertions
-- `EXPECT_THAT(value, matcher)` and `ASSERT_THAT(value, matcher)` — Use flexible [matchers](reference/matchers.md) for rich verification.
-
-Example:
-```cpp
-EXPECT_THAT(name, ::testing::StartsWith("John"));
-EXPECT_THAT(numbers, ::testing::ElementsAre(1, 2, 3));
-```
-
-### Predicate Assertions
-Use when verifying complex conditions with more readable failure messages.
+### Using `EXPECT_EQ` and `ASSERT_EQ`
 
 ```cpp
-bool MutuallyPrime(int m, int n) { ... }
-EXPECT_PRED2(MutuallyPrime, 3, 4);  // Passes
-EXPECT_PRED2(MutuallyPrime, 4, 6);  // Fails with detailed info
+EXPECT_EQ(expected_value, actual_value);  // Non-fatal
+ASSERT_EQ(expected_value, actual_value);  // Fatal
 ```
 
-### Predicate-Formatter Assertions
-More control over formatting failure messages.
+- Compares using `operator==`.
+- On failure, reports the expected and actual values.
+- These macros automatically print values in case of failure to aid debugging.
 
-```cpp
-testing::AssertionResult AssertMutuallyPrime(const char* m_expr, const char* n_expr, int m, int n) {
-  if (MutuallyPrime(m, n)) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << m_expr << " and " << n_expr << " are not mutually prime.";
-}
-EXPECT_PRED_FORMAT2(AssertMutuallyPrime, 3, 4);
-```
+### Other Comparisons
 
----
-
-## 5. Custom Failure Messages
-
-All assertions support streaming custom messages to append to their output:
-
-```cpp
-EXPECT_EQ(result, expected) << "Result did not match expected value.";
-```
-
-These messages appear only when the assertion fails, helping clarify the context.
-
----
-
-## 6. Assertion Best Practices
-
-- **Use `ASSERT_*` for prerequisite checks:** If further test work depends on critical conditions.
-- **Use `EXPECT_*` for validations when continuing on failure is useful.**
-- **Use expressive custom failure messages to clarify intent and ease debugging.**
-- **Prefer `EXPECT_THAT` for complex conditions using matchers for cleaner code.**
-- **For floating-point, avoid `EXPECT_EQ`; use `EXPECT_FLOAT_EQ` or `EXPECT_NEAR`.**
-
----
-
-## 7. Handling Assertions in Subroutines
-
-GoogleTest assertions only abort the current function on fatal failure, not the whole test. To propagate failure in subroutines:
-
-- Use `SCOPED_TRACE("message")` to add context to failures within called helper functions.
-- Use `ASSERT_NO_FATAL_FAILURE(helper())` to confirm the helper did not fail fatally.
-- Check for failure with `::testing::Test::HasFatalFailure()` and handle accordingly.
+| Macro       | Description                                   |
+|-------------|-----------------------------------------------|
+| `EXPECT_NE` | Expect not equal                              |
+| `EXPECT_LT` | Expect less than                              |
+| `EXPECT_LE` | Expect less or equal                          |
+| `EXPECT_GT` | Expect greater than                           |
+| `EXPECT_GE` | Expect greater or equal                       |
 
 Example:
 
 ```cpp
-void Helper() {
-  ASSERT_EQ(1, 2) << "Failed in helper";
-}
-
-TEST(FooTest, Bar) {
-  SCOPED_TRACE("In FooTest::Bar");
-  ASSERT_NO_FATAL_FAILURE(Helper());
-  // Continues only if Helper succeeded
-}
+ASSERT_LT(result, threshold);
+EXPECT_NE(result, 0);
 ```
 
 ---
 
-## 8. Skipping Tests
+## 3. Checking Boolean Conditions
 
-Use `GTEST_SKIP()` to skip tests dynamically, optionally logging a reason:
+Use `EXPECT_TRUE(condition)` or `EXPECT_FALSE(condition)` for general boolean expressions.
 
 ```cpp
-TEST(MyTest, ConditionalSkip) {
-  if (!FeatureAvailable()) {
-    GTEST_SKIP() << "Feature not available on this platform.";
-  }
-  ...actual test code...
-}
+EXPECT_TRUE(pointer != nullptr);
+EXPECT_FALSE(is_error);
 ```
 
----
-
-## 9. Diagnosing Assertion Failures
-
-GoogleTest provides detailed failure messages including:
-
-- Actual and expected values.
-- Source file and line number.
-- Expression text.
-- Multi-line diffs for strings or containers.
-
-For debugging:
-
-- Use `--gtest_break_on_failure` to drop into a debugger immediately.
-- Use `SCOPED_TRACE()` to add trace information.
+Prefer relational assertions (`EXPECT_EQ`, `EXPECT_NE`, etc.) when possible for clearer failure messages.
 
 ---
 
-## 10. Extending Assertions
+## 4. String and Floating-Point Assertions
 
-### Teaching GoogleTest to Print Your Types
+### String Assertions
 
-GoogleTest by default prints standard types and any with `operator<<`. For better output, provide:
-
-- A `PrintTo(const YourType&, std::ostream*)` function in your namespace, or
-- An `AbslStringify(Sink&, const YourType&)` overload.
+- `EXPECT_STREQ(expected_c_str, actual_c_str)`: Compares C strings for equality.
+- `EXPECT_STRNE(expected_c_str, actual_c_str)`: Compares C strings for inequality.
+- `EXPECT_STRCASEEQ(expected_c_str, actual_c_str)`: Case-insensitive equality.
+- `EXPECT_STRCASENE(expected_c_str, actual_c_str)`: Case-insensitive inequality.
 
 Example:
 
 ```cpp
-namespace foo {
-class Point {
-  int x, y;
-  friend void PrintTo(const Point& p, std::ostream* os) {
-    *os << "(" << p.x << ", " << p.y << ")";
-  }
-};
-}
+EXPECT_STREQ("hello", GetGreeting());
 ```
 
-### Predicate and Predicate-Formatter Functions
+### Floating-Point Assertions
 
-Write predicate functions returning `bool` or `AssertionResult` to create reusable, expressive assertions.
+To account for floating-point imprecision, use:
 
-See [Advanced Guide - Predicate Assertions](../advanced.md#predicates) for detailed examples.
-
----
-
-## 11. Summary Example
-
-Here is an example combining several principles:
+- `EXPECT_FLOAT_EQ(expected, actual)` for float comparison
+- `EXPECT_DOUBLE_EQ(expected, actual)` for double comparison
+- `EXPECT_NEAR(val1, val2, abs_error)` to check if two values are within an absolute difference.
 
 ```cpp
-class MyTest : public ::testing::Test {
-protected:
-  void SetUp() override {
-    SCOPED_TRACE("In SetUp");
-  }
-};
+EXPECT_NEAR(computed_value, expected_value, 1e-5);
+```
 
-bool IsEven(int n) {
-  return n % 2 == 0;
-}
+---
 
-testing::AssertionResult IsEvenAR(int n) {
-  if ((n % 2) == 0)
-    return testing::AssertionSuccess();
-  else
-    return testing::AssertionFailure() << n << " is odd";
-}
+## 5. Exception Assertions
 
-TEST_F(MyTest, Example) {
-  int val = GetValue();
-  ASSERT_NO_FATAL_FAILURE(EXPECT_PRED1(IsEven, val));
-  EXPECT_PRED_FORMAT1(IsEvenAR, val) << "Value must be even.";
-  EXPECT_TRUE(val > 0) << "Value should be positive.";
+Verify that code throws or does not throw expected exceptions:
+
+- `EXPECT_THROW(statement, ExceptionType)`
+- `EXPECT_ANY_THROW(statement)`
+- `EXPECT_NO_THROW(statement)`
+
+Example:
+
+```cpp
+EXPECT_THROW(Foo(-1), std::invalid_argument);
+EXPECT_NO_THROW(Foo(10));
+```
+
+---
+
+## 6. Fatal vs Non-Fatal Assertions in Practice
+
+Here is a typical usage scenario:
+
+```cpp
+TEST(MyTestSuite, ExampleTest) {
+  int* ptr = GetPointer();
+  ASSERT_NE(ptr, nullptr) << "Pointer must not be null!";
+
+  // Safe to dereference ptr beyond this point.
+  EXPECT_EQ(*ptr, expected_value);
+
+  // The test continues even if EXPECT_EQ fails,
+  // so further checks can be done.
 }
 ```
 
-This demonstrates use of test fixture, predicate assertion, predicate-formatter assertion, and custom failure messages.
+- `ASSERT_NE` ensures the pointer is valid before continuing;
+- `EXPECT_EQ` allows multiple checks without aborting the test.
 
 ---
 
-## 12. Troubleshooting
+## 7. Timeout and Fatal Failure Handling
 
-### Common Pitfalls
-- Streaming into assertions with side-effects may cause unexpected behaviors—avoid side-effects.
-- Using `EXPECT_EQ` on pointers compares addresses, not contents; use string comparison macros for string literals.
-- Skipping fatal assertions in constructors/destructors; use `SetUp`/`TearDown` instead.
+Use these macros to assert conditions in tests that require strict termination:
 
-### Debugging Unexpected Failures
-- Use `EXPECT_NONFATAL_FAILURE()` or `EXPECT_FATAL_FAILURE()` to verify failure messages in test utilities.
-- Check for missing `ASSERT_*` in helper functions if later test steps segfault.
+- `ASSERT_DEATH(statement, regex)`: Assert that `statement` causes the process to die and the error message matches `regex`.
+- Use to test fatal failures and program shutdown scenarios.
 
----
+Example:
 
-## 13. Related Resources
-
-- [Assertions Reference](reference/assertions.md)
-- [Testing Reference](reference/testing.md)
-- [Advanced GoogleTest Topics](docs/advanced.md)
-- [GoogleTest Primer](docs/primer.md)
-- [Using Matchers with Assertions](reference/matchers.md)
-- [Mocking with GoogleMock](guides/advanced-testing-patterns/mocking-with-googlemock)
+```cpp
+ASSERT_DEATH(SomeFunctionThatExits(), "explicit exit message");
+```
 
 ---
 
-## 14. Next Steps
+## 8. Writing Custom Failure Messages
 
-- Start writing tests using `TEST()` and `TEST_F()` macros.
-- Employ assert and expect macros wisely to ensure effective failure handling.
-- Explore advanced assertions and matchers for expressive testing.
-- Use `SCOPED_TRACE` and `GTEST_SKIP` for better test flow control.
-- Review sample tests and the primer for practical examples.
+You can append custom messages to assertions by using stream syntax:
 
+```cpp
+EXPECT_EQ(result, expected) << "Value did not match after step 3.";
+ASSERT_TRUE(ptr != nullptr) << "Pointer should never be null when calling Foo().";
+```
 
-<Source url="https://github.com/google/googletest" paths={[{ "path": "docs/reference/assertions.md", "range": "Entire" }, { "path": "docs/reference/testing.md", "range": "Entire" }, { "path": "docs/advanced.md", "range": "Entire" }]} />
+This context helps clarify the failure source during debugging.
+
+---
+
+## 9. Best Practices for Assertions
+
+- Use **clear, specific assertions** rather than generic ones.
+- Keep each test focused; multiple checks per test help detect all issues in one run.
+- Place **critical checks** as fatal assertions to avoid cascading errors.
+- Avoid side-effects in expression arguments to assertions.
+- Prefer built-in typed assertions (`EXPECT_EQ`, etc.) over `EXPECT_TRUE` when comparing values.
+- Use `ASSERT_THROW` and `EXPECT_THROW` to validate exception-throwing behavior.
+
+---
+
+## 10. Advanced Tips
+
+- To compare containers or objects, use `EXPECT_THAT()` with GoogleMock matchers for expressive and descriptive validation.
+- Use `ASSERT_NO_FATAL_FAILURE()` to run some code but abort on any fatal failures during it.
+- Use the `SCOPED_TRACE()` macro to add contextual information that propagates through nested assertions.
+
+---
+
+## 11. Troubleshooting Assertions
+
+### Common Issues
+
+- **False positives/negatives**: Ensure that expressions in assertions do not have unpredictable side effects.
+- **Unclear failure messages**: Use custom failure messages or switch to typed assertions for better diagnostics.
+- **Test aborting prematurely**: Make sure to distinguish when to use fatal vs non-fatal assertions.
+
+### Diagnostics
+
+- Use verbose logging or debug mode to see assertion failures in detail.
+- In IDEs, failure location links can help pinpoint the source.
+
+---
+
+## 12. Example: Validating a Calculator
+
+```cpp
+TEST(CalculatorTest, AddsNumbers) {
+  Calculator calc;
+  int result = calc.Add(2, 3);
+  EXPECT_EQ(result, 5) << "Addition failed for 2 + 3.";
+}
+
+TEST(CalculatorTest, DividesNumbers) {
+  Calculator calc;
+  ASSERT_NO_THROW({
+    int div = calc.Divide(10, 2);
+    EXPECT_EQ(div, 5) << "Division result incorrect.";
+  });
+
+  EXPECT_THROW(calc.Divide(10, 0), std::invalid_argument);
+}
+```
+
+This test suite shows both non-fatal and fatal assertion usage, messages, and exception validation.
+
+---
+
+## 13. Next Steps & Related Content
+
+- Explore [Writing Parameterized and Typed Tests](guides/core-workflows/parameterized-tests) to test multiple data combinations efficiently.
+- Consult the [Matchers Reference](api-reference/matchers-actions/argument-matchers) for more expressive assertions using predicates.
+- Review the [Mocking Reference](api-reference/mocking-apis/mock-expectations-actions) to understand how to use assertions with mock expectations.
+- Learn about [Death Tests and Error Handling](guides/core-workflows/death-tests) for advanced failure scenario testing.
+
+---
+
+## 14. Additional Resources
+
+- [GoogleTest Primer](getting-started/first-test-experience/writing-your-first-test)
+- [Core Concepts & Terminology](overview/architecture-concepts/core-concepts-terminology)
+- [Setting Expectations and Actions](api-reference/mocking-apis/mock-expectations-actions)
+
+---
+
+# Summary
+This page equips you with comprehensive knowledge on GoogleTest's assertions and expectations, guiding you to write robust tests that capture intended behaviors, handle errors gracefully, and provide meaningful feedback. It covers basic and advanced assertions, exception checks, failure handling, and best usage practices.
